# 67-youtube-counter

./: .gitignore  67-counter.spec  README.md  pyproject.toml
scripts/: build_windows_exe.ps1  launch_ui.py
sixseven_counter/: __init__.py  cli.py  errors.py  manifest.py  matcher.py  models.py  render.py  selection.py  timing.py  ui.py  ui_state.py  youtube.py
tests/: __init__.py  test_cli.py  test_manifest.py  test_matcher.py  test_render.py  test_selection.py  test_timing.py  test_ui.py  test_ui_state.py  test_youtube.py
